updated readme with windows instructions